[project]
name = "pymbend"
version = "0.1.0"
description = "Bending non-positive-definite matrices to positive-definite"
authors = [
    { name = "Michael Zietz", email = "michael.zietz@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pymbend"]
